--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,27 @@
-*
-{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+@font-face {
+  font-family: "google-sans";
+  src: url("fonts/GoogleSans-Regular.ttf") format("truetype");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "google-sans";
+  src: url("fonts/GoogleSans-Medium.ttf") format("truetype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "google-sans";
+  src: url("fonts/GoogleSans-Bold.ttf") format("truetype");
+  font-weight: 700;
+}
+
+* {
+  font-family: google-sans;
 }
