--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,21 @@
-.code 
-{
-    font-family: monospace;
-    font-style: italic;
-    font-weight: 300;
-    padding: 0.2rem 1.5rem;
-    background-color: #eee;
-    border-radius: 8px;
-    color: #646060;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+/* 
+Base : https://fonts.googleapis.com/css2?
+font :  family=[Name]:ital,wght@
+property :  0,400;1,300 ([0 -> normal || 1 -> italics],[fontweight])
+end : &display=swap
+*/
+.code {
+  font-family: monospace;
+  font-style: italic;
+  font-weight: 300;
+  padding: 0.2rem 1.5rem;
+  background-color: #eee;
+  border-radius: 8px;
+  color: #646060;
+}
+
+.hero {
+  /* background: url(./assets/bg2.png); */
+  /* background-size: cover; */
 }
